--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    // custom seekbar
+    implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     testImplementation 'junit:junit:4.12'
