--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // custom seekbar
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
 
+    // material design
+    implementation 'com.google.android.material:material:1.0.0'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     testImplementation 'junit:junit:4.12'
