--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    // navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
+
     // custom seekbar
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
 
