--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,25 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
+    // Lifecycle components
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // ViewModel Kotlin support
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
 
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
+
+    // Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
 
     // custom seekbar
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
@@ -58,5 +72,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
 }
