--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
@@ -50,20 +57,20 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
     // Lifecycle components
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // ViewModel Kotlin support
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     // navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
-    implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.0"
 
     // Coroutines
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
     // custom seekbar
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
