navigation menu test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
+        <uses-library
+            android:name="android.test.runner"
+            android:required="false" />
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
