--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,6 @@ task clean(type: Delete) {
 
 ext {
     room_version = '2.2.6'
+    lifecycle_version = '2.3.0'
+    fragment_version = '1.3.1'
 }
