--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
 
@@ -32,4 +33,5 @@ ext {
     room_version = '2.2.6'
     lifecycle_version = '2.3.0'
     fragment_version = '1.3.1'
+    rx_android_version = '3.0.0'
 }
