--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext.kotlin_version = '1.4.31'
-    ext.hilt_version = '2.33-beta'
     ext.nav_version = '2.3.5'
 
     repositories {
@@ -11,7 +10,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
@@ -34,4 +32,5 @@ ext {
     lifecycle_version = '2.3.0'
     fragment_version = '1.3.1'
     rx_android_version = '3.0.0'
+    dagger_version = '2.33'
 }
