--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,28 @@
 buildscript {
-    ext.kotlin_version = '1.5.10'
-    ext.nav_version = '2.3.5'
 
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
+
+    ext.versions = [
+            kotlin    : '1.6.10',
+            navigation: '2.3.5'
+    ]
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.navigation}"
     }
 }
 
 allprojects {
     repositories {
         google()
-        maven { url 'https://jitpack.io' }
-        maven { url "https://oss.jfrog.org/libs-snapshot" }
+        jcenter()
+        mavenCentral()
     }
 }
 
@@ -26,9 +31,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    room_version = '2.3.0'
-    lifecycle_version = '2.3.1'
-    fragment_version = '1.3.4'
+    room_version = '2.4.0'
+    lifecycle_version = '2.4.0'
+    fragment_version = '1.4.0'
     rx_android_version = '3.0.0'
-    dagger_version = '2.33'
+    dagger_version = '2.40.5'
 }
