--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:name=".MainApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_app_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_launcher_round"
@@ -18,8 +18,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="user"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="user">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
